--- a/app/scss/_orderView.scss
+++ b/app/scss/_orderView.scss
@@ -3,7 +3,7 @@
   margin-top: 80px;
   color: #fff;
   height: auto;
-  // width: 25%;
+  width: 25%;
   h2 {
     background: lighten($primary-background, 5%);
     padding: 20px;
